Details
-
Bug
-
Resolution: Done
-
P1: Critical
-
5.15.0
-
Desktop
-
-
f9940b15f7f0fde731431626172939b9821fd660 (qt/qtbase/dev) a9f82b8b2c19ecc5bf5ab0d376780c34e8435202 (qt/qtbase/5.15)
Description
Attached tiny example shows using stylesheet on button breaks signal slot mechanism.
Most likely 6e1d70ae12baae4610356ec7b69635ad75a97b4e broke it.
Attachments
Issue Links
- is duplicated by
-
QTBUG-84493 REG: Styled QPushButton does not respond to clicks on macOS
-
- Closed
-
-
QTBUG-84879 QPushButton with stylesheet cannot be pushed when it is clicked on macOS & Qt 5.15
-
- Closed
-
- resulted from
-
QTBUG-81452 QPushButton has empty space in layout
-
- Closed
-
- resulted in
-
QTBUG-86587 QPushButton: styling causes clicked() signal not to emit when clicked
-
- Closed
-