src/widgets/styles/qstylesheetstyle.cpp
@@ -5826,6 +5826,7 @@ QRect QStyleSheetStyle::subElementRect(SubElement se, const QStyleOption *opt, c
 
     switch (se) {
     case SE_PushButtonContents:
+    case SE_PushButtonBevel:
     case SE_PushButtonFocusRect:
         if (const QStyleOptionButton *btn = qstyleoption_cast<const QStyleOptionButton *>(opt)) {
             if (rule.hasBox() || !rule.hasNativeBorder())
